Fix problems with multi-level XInclude (XERCESC-1918). While at it, fix a few bugs and memory leaks in XInclude code.

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@932950 13f79535-47bb-0310-9956-ffa450edef68